policies/security-context/disallow-sysctls/resources.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: mas-dev-core
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: kernel.shm_next_id
        value: "4"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: mas-dev-core
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: kernel.shm_rmid_forced
        value: "2"
      - name: kernel.shm_next_id
        value: "4"
###### Pods - Good
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: mas-dev-core
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: mas-dev-core
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: kernel.shm_rmid_forced
        value: "2"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  namespace: mas-dev-core
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.ip_local_port_range
        value: "31000    60999"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
  namespace: mas-dev-core
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.ip_unprivileged_port_start
        value: "2048"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
  namespace: mas-dev-core
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.tcp_syncookies
        value: "0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
  namespace: mas-dev-core
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.ping_group_range
        value: "1   0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
  namespace: mas-dev-core
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    sysctls:
      - name: net.ipv4.ip_unprivileged_port_start
        value: "2048"
      - name: net.ipv4.ping_group_range
        value: "1   0"
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
  namespace: mas-dev-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        sysctls:
          - name: kernel.shm_next_id
            value: "4"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
  namespace: mas-dev-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        sysctls:
          - name: kernel.shm_rmid_forced
            value: "2"
          - name: kernel.shm_next_id
            value: "4"
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
  namespace: mas-dev-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
  namespace: mas-dev-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        sysctls:
          - name: kernel.shm_rmid_forced
            value: "2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
  namespace: mas-dev-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        sysctls:
          - name: net.ipv4.ip_local_port_range
            value: "31000    60999"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
  namespace: mas-dev-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        sysctls:
          - name: net.ipv4.ip_unprivileged_port_start
            value: "2048"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
  namespace: mas-dev-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        sysctls:
          - name: net.ipv4.tcp_syncookies
            value: "0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
  namespace: mas-dev-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        sysctls:
          - name: net.ipv4.ping_group_range
            value: "1   0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment07
  namespace: mas-dev-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        sysctls:
          - name: net.ipv4.ip_unprivileged_port_start
            value: "2048"
          - name: net.ipv4.ping_group_range
            value: "1   0"
